# it_college

./: .gitignore  README.md  _config.yml
.github/: copilot-instructions.md
.github/workflows/: coverage.yml  cron.md  cron.yml  manual.yml
2022/: README.md
example/: README.md  ds_1.ipynb  python_basics.ipynb
example/basics/: python_basics.ipynb  python_classes.ipynb
example/coverage_io/: app.py  test.py
example/data_science/: ds_1.ipynb
example/exam/: test.py
example/gw2_economics/: data.txt  ecto.ipynb
example/multyprocessing/: main.ipynb
notes/: 10_github_pages.md  11_algorithms.md  11_numpy.md  11_numpy_2.md  12_matplotlib.md  1_lesson.md  2_lesson.md  3_lesson.md  3_results_formatting.md  4_first_class.md  4_python_basics.md  5_first_class.md  6_github_actions.md  6_virtualenvs.md  7_github_actions.md  7_testing.md  8_github_actions.md  9_databases.md  README.md  _databases.md  _github_actions.md  _github_pages.md  _testing.md  _virtualenvs.md  github_actions.md  intro.md
notes/01_first_lesson/: README.md
notes/03_results_formatting/: README.md
notes/04_python_basics/: README.md
notes/05_OOP_first_class/: README.md  classes.ipynb  lab_1.ipynb
notes/05_OOP_paradigms/: README.md
notes/05_OOP_work_with_classes/: README.md  classes.ipynb
notes/06_python_agents/: .env.example  QUICKSTART.md  README.md  pyproject.toml  simple_agent.py
notes/06_python_agents/code_pipeline/: agent.py
notes/06_python_agents/research_team/: agent.py
notes/06_python_agents/story_improver/: agent.py
notes/07_testing/: README.md
reports/: README.md
(+27 files in other folders)
